Add JWT authentication

--- a/Proj/SpringBootRegistrationLogin/src/main/resources/application.properties
+++ b/Proj/SpringBootRegistrationLogin/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.format_sql=true
 server.port=9000
+jwt.secret=javainuse
